<resources>
    <string name="app_name">Ailatrieuphu</string>
    <string name="user_choithu">Ẩn danh</string>
    <string name="capdo">Cấp 1</string>
    <string name="xacnhan">XÁC NHẬN</string>
    <string name="title_xacnhan">Bạn muốn dừng cuộc chơi ?</string>
    <string name="btn_co">Có</string>
    <string name="btn_khong">Không</string>
    <string name="title_start">Bạn đã sẵn sàng ?</string>
    <string name="btn_chuasansang">Chưa</string>
    <string name="btn_sansang">Sẵn sàng</string>
    <string name="hetgio">Hết giờ</string>
    <string name="btn_dong">Đóng</string>
    <string name="title_toolbar_ketqua">Kết quả</string>
    <string name="thanks">CẢM ƠN BẠN ĐÃ THAM GIA</string>
    <string name="kq_thanhtich">THÀNH TÍCH</string>
    <string name="kq_thuong">THƯỞNG</string>
    <string name="title_activity_man_hinh_chinh">ManHinhChinhActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Manhinhchinh">Màn hình chính</string>
    <string name="chondoithu">Chọn đối thủ</string>
    <string name="bangxephang">Bảng xếp hạng</string>
    <string name="caidat">Tùy chỉnh</string>
    <string name="dangxuat">Đăng xuất</string>
    <string name="home">Triệu phú Mobile</string>
    <string name="title_doicauhoi">Bạn có chắc chắn muốn đổi câu hỏi ?</string>
    <string name="title_5050">Bạn có muốn bỏ hai đáp án sai ?</string>
    <string name="help_goidien">Chuyên gia</string>
    <string name="bacsi">Bác sĩ</string>
    <string name="giaovien">Giáo viên</string>
    <string name="phongvien">Phóng viên</string>
    <string name="help_hoiykienkhangia">Hỏi ý kiến khán giả</string>
    <string name="kysu">Kỹ sư</string>
    <string name="trangcanhan">Trang cá nhân</string>
    <string name="setting">Tùy Chỉnh</string>
    <string name="exit">Thoát</string>
</resources>
