<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="@dimen/margin1">

        <LinearLayout
            android:id="@+id/tv_cauhoi"
            android:layout_width="300dp"
            android:layout_height="280dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin2"
            android:layout_marginRight="@dimen/margin2"
            android:background="@drawable/custorm_bghhelp_goidien"
            android:gravity="center"
            android:orientation="vertical"
            android:textColor="@color/text_cauhoi"
            android:textStyle="bold">

            <LinearLayout
                android:id="@+id/bg_help"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/bacsi_help"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_min"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/margin3"
                        android:layout_height="@dimen/margin3"
                        android:src="@drawable/app__ic_help_call_01_active" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bacsi"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/giaovien_help"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/margin_min">

                    <ImageView
                        android:layout_width="@dimen/margin3"
                        android:layout_height="@dimen/margin3"
                        android:src="@drawable/app__ic_help_call_02_active" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/giaovien"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bg_help1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/kysu_help"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/margin_min">

                    <ImageView
                        android:layout_width="@dimen/margin3"
                        android:layout_height="@dimen/margin3"
                        android:src="@drawable/app__ic_help_call_03_active" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kysu"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/phongvien_help"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/margin_min">

                    <ImageView
                        android:layout_width="@dimen/margin3"
                        android:layout_height="@dimen/margin3"
                        android:src="@drawable/app__ic_help_call_04_active" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phongvien"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_socauhoi"
            android:layout_width="145dp"
            android:layout_height="30dp"
            android:layout_gravity="top|center"
            android:layout_marginBottom="@dimen/margin1"
            android:background="@drawable/custorm_goidien"
            android:gravity="center"
            android:text="@string/help_goidien"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_close"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:text="@string/btn_dong"
            android:layout_gravity="bottom|center"
            android:background="@drawable/custorm_button"
            android:layout_margin="@dimen/margin1"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:visibility="invisible"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:id="@+id/cautraloi">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/img_mainhelp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/tv_help_cautraloi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin2"
                android:text="Câu trả lời là"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/text_cauhoi"
                android:textStyle="bold"
                android:textSize="@dimen/label"/>


        </LinearLayout>


    </FrameLayout>

</LinearLayout>